--- a/MidnightArtifact/app/src/main/res/values/strings.xml
+++ b/MidnightArtifact/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <!--我的-->
     <string name="personal_recharge_str">我的金币</string>
     <string name="personal_myorder_str">我的订单</string>
+    <string name="personal_myvip_str">我的VIP</string>
+    <string name="personal_mygift_str">我的礼物</string>
     <string name="personal_task_str">每日任务</string>
     <string name="personal_maillist_str">通讯录邀请</string>
     <string name="personal_service_str">联系客服</string>
